[package]
name = "circle-stark"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-circle = { git = "https://github.com/thetalight/Plonky3.git" }
p3-field = { git = "https://github.com/thetalight/Plonky3.git" }
p3-mersenne-31 = { git = "https://github.com/thetalight/Plonky3.git" }

itertools = "0.13.0"
criterion = "0.5.1"